# ROS_Course

./: README.md
Workspaces/getting_started/.catkin_tools/profiles/default/: devel_collisions.txt
Workspaces/getting_started/devel/: .catkin  local_setup.sh
Workspaces/getting_started/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
Workspaces/getting_started/devel/.private/catkin_tools_prebuild/lib/pkgconfig/: catkin_tools_prebuild.pc
Workspaces/getting_started/devel/.private/my_first_package/: .catkin  local_setup.sh  setup.sh
Workspaces/getting_started/devel/.private/my_first_package/lib/pkgconfig/: my_first_package.pc
Workspaces/getting_started/devel/.private/ros_package_template/: .catkin  .rosinstall  local_setup.sh
Workspaces/getting_started/devel/lib/my_first_package/: my_first_package_node
Workspaces/getting_started/devel/lib/pkgconfig/: ros_package_template.pc
Workspaces/getting_started/devel/share/ros_package_template/cmake/: ros_package_templateConfig.cmake
Workspaces/getting_started/src/my_first_package/: CMakeLists.txt
Workspaces/getting_started/src/my_first_package/src/: main.cpp
Workspaces/smb_ws/.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
Workspaces/smb_ws/devel/: .catkin
Workspaces/smb_ws/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
Workspaces/smb_ws/devel/.private/hector_gazebo_plugins/: .catkin  local_setup.sh
Workspaces/smb_ws/devel/.private/smb_control/: .catkin  .rosinstall  setup.sh
Workspaces/smb_ws/devel/.private/smb_description/: .catkin  local_setup.sh
Workspaces/smb_ws/devel/.private/smb_gazebo/: .catkin  local_setup.sh  setup.sh
Workspaces/smb_ws/devel/.private/smb_highlevel_controller/: .catkin  .rosinstall
Workspaces/smb_ws/devel/include/hector_gazebo_plugins/: SetBiasRequest.h
Workspaces/smb_ws/devel/lib/pkgconfig/: smb_control.pc  smb_gazebo.pc
Workspaces/smb_ws/devel/lib/smb_highlevel_controller/: smb_emergency_stop_crash  smb_highlevel_controller
Workspaces/smb_ws/devel/share/smb_description/cmake/: smb_descriptionConfig.cmake
Workspaces/smb_ws/devel/share/smb_gazebo/cmake/: smb_gazeboConfig.cmake
Workspaces/smb_ws/src/smb_highlevel_controller/: CMakeLists.txt  package.xml
Workspaces/smb_ws/src/smb_highlevel_controller/config/: config.yaml  ex4rvizconfig.rviz  rqt_multiplot_smb_emg.xml  rqt_multiplot_xy.xml  rvizconfig.rviz
Workspaces/smb_ws/src/smb_highlevel_controller/include/smb_highlevel_controller/: smb_myhighlevel_controller.hpp
Workspaces/smb_ws/src/smb_highlevel_controller/launch/: ex2.launch  ex4_1.launch  ex4_2.launch  ex5.launch
Workspaces/smb_ws/src/smb_highlevel_controller/src/: smb_emergency_stop_close.cpp  smb_emergency_stop_crash.cpp  smb_highlevel_controller_node.cpp  smb_myhighlevel_controller.cpp
(+19 files in other folders)
